--- a/templates/base.html
+++ b/templates/base.html
@@ -6,46 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}EduSec{% endblock %}</title>
     
-    {# Bootstrap CSS #}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
-    {# Tu CSS personalizado #}
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <link rel="stylesheet" href="{% static 'profiles/css/style.css' %}">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'profiles:inicio' %}">EduSec</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand d-flex align-items-center" href="{% url 'profiles:inicio' %}">
+                <img src="{% static 'profiles/img/Edusec.png' %}" alt="EduSec Logo">
+                <span class="ms-2">EduSec</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto"> {# ms-auto para alinear a la derecha #}
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profiles:inicio' %}">Inicio</a>
+                        <a class="nav-link" href="{% url 'profiles:inicio' %}"><i class="fas fa-home me-1"></i>Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profiles:chatbot' %}">Chatbot Educativo</a>
+                        <a class="nav-link" href="{% url 'profiles:glosario' %}"><i class="fas fa-book-open me-1"></i>Aprende</a>
                     </li>
-                    {# Puedes añadir más enlaces aquí, por ejemplo, a una página de "Acerca de" o "Recursos" #}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+                        <a class="nav-link" href="{% url 'profiles:chatbot' %}"><i class="fas fa-robot me-1"></i>Chatbot</a>
                     </li>
+                    {% if request.session.participante_nombre %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profiles:perfil' %}">
+                            <i class="fas fa-user me-1"></i>{{ request.session.participante_nombre }}
+                        </a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin:index' %}"><i class="fas fa-user-shield me-1"></i>Admin</a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container mt-4">
-        {% block content %}
-        {# El contenido específico de cada página irá aquí #}
-        {% endblock %}
+    <div class="container">
+        <div class="main-container" data-aos="fade-up">
+            {% block content %}
+            {% endblock %}
+        </div>
     </div>
 
-    {# Bootstrap JavaScript (bundle con Popper) #}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eP0C7Pqgugc26f04O" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     
-    {# Bloque para JavaScript adicional de cada página #}
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    
+    <script>
+      AOS.init({
+        duration: 800, // Duración de la animación en milisegundos
+        once: true,    // La animación ocurre solo una vez por elemento
+      });
+    </script>
+    
     {% block extra_js %}
     {% endblock %}
 </body>
