--- a/templates/base.html
+++ b/templates/base.html
@@ -8,16 +8,13 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <link rel="stylesheet" href="{% static 'profiles/css/style.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="{% url 'profiles:inicio' %}">
-                <img src="{% static 'profiles/img/Edusec.png' %}" alt="EduSec Logo">
+                <img src="{% static 'profiles/img/edusec_logo.png' %}" alt="EduSec Logo">
                 <span class="ms-2">EduSec</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -58,16 +55,13 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    
     <script>
       AOS.init({
-        duration: 800, // Duración de la animación en milisegundos
-        once: true,    // La animación ocurre solo una vez por elemento
+        duration: 800,
+        once: true,
       });
     </script>
-    
     {% block extra_js %}
     {% endblock %}
 </body>
