--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="{% url 'profiles:glosario' %}"><i class="fas fa-book-open me-1"></i>Aprende</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profiles:chatbot' %}"><i class="fas fa-robot me-1"></i>Chatbot</a>
+                        <a class="nav-link" href="{% url 'profiles:chatbot' %}">Chatbot </a>
                     </li>
                     {% if request.session.participante_nombre %}
                     <li class="nav-item">
