--- a/profiles/templates/profiles/inicio.html
+++ b/profiles/templates/profiles/inicio.html
@@ -8,7 +8,7 @@
     <div class="col-lg-9 col-md-11">
 
         <div class="text-center mb-5">
-            <img src="{% static 'profiles/img/edusec.png' %}" alt="EduSec Logo" class="img-fluid mb-4" style="max-width: 180px;">
+            <img src="{% static 'profiles/img/edusec_logo.png' %}" alt="EduSec Logo" class="img-fluid mb-4" style="max-width: 180px;">
             <h1 class="display-5">Protege tu Mundo Digital</h1>
             <p class="lead mt-3">
                 EduSec es tu campo de entrenamiento contra las ciberamenazas. Aprende a detectar phishing y malware en simulaciones interactivas y fortalece tus conocimientos.
