--- a/profiles/templates/profiles/final.html
+++ b/profiles/templates/profiles/final.html
@@ -43,7 +43,7 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading{{ forloop.counter }}">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}">
-                        <i class="fas fa-{{ if respuesta.es_correcta }}check-circle text-success{{ else }}times-circle text-danger{{ endif }} me-2"></i>
+                        <i class="fas {% if respuesta.es_correcta %}fa-check-circle text-success{% else %}fa-times-circle text-danger{% endif %} me-2"></i>
                         <strong>Escenario {{ forloop.counter }}:</strong> {{ respuesta.escenario.titulo }}
                     </button>
                 </h2>
