--- a/profiles/static/profiles/css/style.css
+++ b/profiles/static/profiles/css/style.css
@@ -428,3 +428,30 @@ h1, h2, h3 {
 .badge-description {
     font-size: 0.9rem;
 }
+
+.error-page-container {
+    padding: 40px 15px;
+}
+
+.error-image {
+    max-width: 200px;
+    height: auto;
+    animation: float 4s ease-in-out infinite;
+}
+
+/* Animación sutil para la imagen */
+@keyframes float {
+	0% {
+		transform: translatey(0px);
+	}
+	50% {
+		transform: translatey(-15px);
+	}
+	100% {
+		transform: translatey(0px);
+	}
+}
+
+.text-bronze {
+    color: #CD7F32; 
+}
